// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when can delete 1`] = `
<div
  className="components-grid-row-m__container"
>
  <div
    className="components-grid-row-m__content"
  >
    <div
      id="child"
    />
  </div>
  <FaClose
    className="components-grid-row-m__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when cannot delete 1`] = `
<div
  className="components-grid-row-m__container"
>
  <div
    className="components-grid-row-m__content"
  >
    <div
      id="child"
    />
  </div>
</div>
`;
